# voltscope

./: .gitignore  Makefile  README.md  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_prd_step1_foundation.py  0003_phase3_member_auth.py  0004_phase4_admin_cms.py  0005_phase7_source_whitelist.py  0006_phase7_crawler_runs.py  0007_phase7_content_candidates.py  0008_phase7_mistral_generation.py  0009_phase7_daily_content_reports.py  0010_phase7_selector_repairs.py  0011_sync_published_translations.py  0012_user_soft_delete.py  0013_release_deleted_user_emails.py  0013_rename_content_pipeline_values.py  0014_rename_prompt_versions.py  0015_merge_migration_heads.py
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  deps.py  health.py  member.py  public.py  router.py
backend/app/core/: config.py  errors.py  logging.py  redis.py
backend/app/db/: base.py  session.py
backend/app/jobs/: content_pipeline.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: admin.py  auth.py  common.py  content.py
backend/app/security/: jwt.py  passwords.py
backend/app/services/: ai_ingest.py  article_classification.py  content.py  email.py  sanitize.py
backend/scripts/: seed.py  seed_content_sources.py
backend/tests/: test_admin_articles.py  test_admin_users.py  test_config.py  test_content_sources.py  test_daily_content_pipeline.py  test_health.py
(+96 files in other folders)
